tests/rustdoc-ui/cfg-hide-show-conflict.stderr
error: same `cfg` was in `auto_cfg(hide(...))` and `auto_cfg(show(...))` on the same item
  --> $DIR/cfg-hide-show-conflict.rs:3:55
   |
LL | #![doc(auto_cfg(show(windows), show(target_os, values("linux"))))]
   |                                                       ^^^^^^^
   |
note: first change was here
  --> $DIR/cfg-hide-show-conflict.rs:2:40
   |
LL | #![doc(auto_cfg(hide(target_os, values("linux"))))]
   |                                        ^^^^^^^

error: aborting due to 1 previous error

